# wlinhibit

./: .clang-format  .gitignore  LICENSE  README.md  flake.nix  meson.build  wlinhibit.c
